   should return a SystemError for broken configs/unreachable servers etc., and
   fix the apt/dpkg implementation accordingly.
 - apport-retrace: Don't crash, just give a proper error message if servers are
   unreachable, or configuration files are broken. (LP: #859248)
 - backends/packaging-apt-dpkg.py: Fix crash when /etc/apport/native-origins.d
   contains any files. (LP: #865199)

1.23.1 (2011-09-29)
-------------------
Bug fixes:
 - apport/crashdb.py: Ensure that duplicate table only has one entry per report
   ID.
 - apport-retrace: Pass correct executable path to gdb in --gdb with --sandbox
   mode.
 - apport-retrace: Do not leave behind temporary directories on errors.
 - apport-retrace: Drop assertion failure for existance of "Stacktrace". This
   isn't present in the case of gdb crashing, and there is not much we can do
   about it. This should not break the retracer.
 - apport/report.py: Unwind XError() from stack traces for the "StacktraceTop"
   field, as they take a significant part of the trace. This causes bugs to be
   duplicated which really have different causes.

1.23 (2011-09-14)
-----------------
Improvements:
 - crashdb.py, crash-digger, dupdb-admin: Drop the concept of "duplicate DB
   consolidation". Such massive queries cause timeouts with e. g. Launchpad.
   Instead, update the status of potential master bugs in the crash DB whenever
   check_duplicate() is called.

Bug fixes:
 - launchpad.py: Fix crash in close_duplicate() if master bug was already
   marked as a duplicate of the examined bug.
 - problem_report.py, load(): Fix missing last character if the last line in a
   multi-line field is not terminated with a newline.
 - launchpad.py: Fix test_marking_python_task_mangle() check to work with
   current Launchpad.
 - apport-retrace: If the user did not specify a --cache directory, create a
   shared one instead of letting the two install_packages() calls create their